# test-rust-gpu-tools

./: .gitignore  Cargo.toml  LICENSE  LICENSE copy  README.md  rust-toolchain.toml  rustfmt.toml  test-rust-gpu-tools.code-workspace  wget-log
.devcontainer/: devcontainer.json
blake3/cuda/: blake3_cuda.cu  blake3_cuda.fatbin
blake3/cuda/src/: main.rs
crates/blake3/cuda/: Cargo.toml  blake3.cu  blake3.fatbin  blake3_cuda.cu  blake3_cuda.fatbin
crates/rust-gpu-tools/: COPYRIGHT  Cargo.toml  README.md
crates/rust-gpu-tools/examples/: add.cl  add.cu  add.fatbin  add.rs  add_test.cl  blake3_cuda.cu
crates/rust-gpu-tools/src/: device.rs  error.rs  lib.rs  program.rs
crates/test-gpu/: Cargo.toml
crates/test-gpu/add/: add.cl
crates/test-gpu/blake3_gpu/: blake3_test.cu  blake3_test.fatbin
crates/test-gpu/src/: bandwidthTest.cu  main.rs  main_temp.rs  main_temp2.rs  main_test.rs
doc/: .rustc_info.json  .rustdoc_fingerprint.json
doc/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/doc/add/: all.html  fn.cuda.html  fn.main.html  fn.opencl.html  index.html  sidebar-items.js
doc/doc/rust_gpu_tools/: all.html  enum.Framework.html  enum.GPUError.html  enum.Program.html  enum.UniqueId.html  enum.Vendor.html  index.html  macro.program_closures!.html  macro.program_closures.html  sidebar-items.js  struct.Device.html  struct.DeviceUuid.html  struct.LocalBuffer.html  struct.PciId.html
doc/doc/static.files/: SourceSerif4-LICENSE-3bb119e13b1258b7.md  main-0b2e2def73e61cbe.js  (+3 more)
rust-gpu-tools/examples/: add.rs  blake3_opcl.cl
(+204 files in other folders)
